# DebugDrawer

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  justfile
Example/: BUILD.bazel
Example/iOS/: ExampleApp_iOS.swift  Info.plist
Example/macOS/: ExampleApp.swift  Info.plist
Sources/DebugDrawer/: AsyncPluginView.swift  BUILD.bazel  DebugDrawer.swift  DebugDrawerOverlay.swift  DebugDrawerPlugin.swift  PlatformHelpers.swift
Sources/DebugDrawerAccessibilityPlugin/: A11yAuditor.swift  BUILD.bazel  DebugDrawerAccessibilityPlugin.swift
Sources/DebugDrawerAppInfoPlugin/: BUILD.bazel  DebugDrawerAppInfoPlugin.swift
Sources/DebugDrawerConsolePlugin/: BUILD.bazel  DebugDrawerConsolePlugin.swift
Sources/DebugDrawerCookiesPlugin/: BUILD.bazel  DebugDrawerCookiesPlugin.swift
Sources/DebugDrawerDeepLinkPlugin/: BUILD.bazel  DebugDrawerDeepLinkPlugin.swift
Sources/DebugDrawerDiskIOPlugin/: BUILD.bazel  DebugDrawerDiskIOPlugin.swift
Sources/DebugDrawerEnergyPlugin/: BUILD.bazel  DebugDrawerEnergyPlugin.swift
Sources/DebugDrawerFileBrowserPlugin/: BUILD.bazel  DebugDrawerFileBrowserPlugin.swift
Sources/DebugDrawerKeychainPlugin/: BUILD.bazel  DebugDrawerKeychainPlugin.swift
Sources/DebugDrawerLaunchTimePlugin/: BUILD.bazel  DebugDrawerLaunchTimePlugin.swift
Sources/DebugDrawerLoadedLibrariesPlugin/: BUILD.bazel  DebugDrawerLoadedLibrariesPlugin.swift
Sources/DebugDrawerLocationPlugin/: BUILD.bazel  DebugDrawerLocationPlugin.swift
Sources/DebugDrawerNetworkPlugin/: BUILD.bazel  DebugDrawerNetworkPlugin.swift
Sources/DebugDrawerPerformancePlugin/: BUILD.bazel  DebugDrawerPerformancePlugin.swift
Sources/DebugDrawerScreenshotPlugin/: BUILD.bazel  DebugDrawerScreenshotPlugin.swift
Sources/DebugDrawerUserDefaultsPlugin/: BUILD.bazel  DebugDrawerUserDefaultsPlugin.swift
Sources/DebugDrawerViewInspectorPlugin/: BUILD.bazel  DebugDrawerViewInspectorPlugin.swift  MeasurementTool.swift  SwiftUIRenderTracker.swift  ViewDebugger3D.swift
Tests/DebugDrawerAccessibilityPluginTests/: AccessibilityPluginTests.swift  BUILD.bazel
Tests/DebugDrawerAppInfoPluginTests/: AppInfoPluginTests.swift  BUILD.bazel
Tests/DebugDrawerConsolePluginTests/: BUILD.bazel  ConsolePluginTests.swift
Tests/DebugDrawerDiskIOPluginTests/: BUILD.bazel  DiskIOPluginTests.swift
Tests/DebugDrawerEnergyPluginTests/: BUILD.bazel  EnergyPluginTests.swift
Tests/DebugDrawerFileBrowserPluginTests/: BUILD.bazel  FileBrowserPluginTests.swift
Tests/DebugDrawerKeychainPluginTests/: BUILD.bazel  KeychainPluginTests.swift
Tests/DebugDrawerNetworkPluginTests/: BUILD.bazel  NetworkPluginTests.swift
Tests/DebugDrawerPerformancePluginTests/: BUILD.bazel  PerformancePluginTests.swift
Tests/DebugDrawerScreenshotPluginTests/: BUILD.bazel  ScreenshotPluginTests.swift
Tests/DebugDrawerTests/: BUILD.bazel  DebugDrawerTests.swift
Tests/DebugDrawerUserDefaultsPluginTests/: BUILD.bazel  UserDefaultsPluginTests.swift
Tests/DebugDrawerViewInspectorPluginTests/: BUILD.bazel  ViewInspectorPluginTests.swift
