load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ExampleAppLib",
    srcs = glob(["*.swift"]),
    module_name = "ExampleApp",
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerAccessibilityPlugin",
        "//Sources/DebugDrawerAppInfoPlugin",
        "//Sources/DebugDrawerConsolePlugin",
        "//Sources/DebugDrawerDiskIOPlugin",
        "//Sources/DebugDrawerEnergyPlugin",
        "//Sources/DebugDrawerFileBrowserPlugin",
        "//Sources/DebugDrawerKeychainPlugin",
        "//Sources/DebugDrawerNetworkPlugin",
        "//Sources/DebugDrawerPerformancePlugin",
        "//Sources/DebugDrawerScreenshotPlugin",
        "//Sources/DebugDrawerUserDefaultsPlugin",
        "//Sources/DebugDrawerViewInspectorPlugin",
    ],
)

macos_application(
    name = "ExampleApp",
    bundle_id = "com.debugdrawer.example",
    bundle_name = "DebugDrawerExample",
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    entitlements = "ExampleApp.entitlements",
    deps = [":ExampleAppLib"],
    linkopts = ["-framework", "IOKit"],
)
