load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "DebugDrawerEnergyPlugin",
    srcs = glob(["*.swift"]),
    module_name = "DebugDrawerEnergyPlugin",
    deps = ["//Sources/DebugDrawer"],
    linkopts = ["-framework", "IOKit"],
    visibility = ["//visibility:public"],
)
