load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerAccessibilityPluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    data = glob(["__Snapshots__/**"], allow_empty = True),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerAccessibilityPlugin",
        "@swiftpkg_mockable//:Mockable",
    ],
)
