load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerAppInfoPluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerAppInfoPlugin",
        "@swiftpkg_mockable//:Mockable",
    ],

)
