load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerDiskIOPluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerDiskIOPlugin",
        "@swiftpkg_mockable//:Mockable",
    ],

)
