load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerEnergyPluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerEnergyPlugin",
        "@swiftpkg_mockable//:Mockable",
    ],
    linkopts = ["-framework", "IOKit"],
)
