load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerFileBrowserPluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerFileBrowserPlugin",
        "@swiftpkg_mockable//:Mockable",
    ],

)
