load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerPerformancePluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerPerformancePlugin",
        "@swiftpkg_mockable//:Mockable",
    ],

)
