load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "DebugDrawerUserDefaultsPluginTests",
    size = "small",
    srcs = glob(["*.swift"]),
    copts = ["-DMOCKING"],
    deps = [
        "//Sources/DebugDrawer",
        "//Sources/DebugDrawerUserDefaultsPlugin",
        "@swiftpkg_mockable//:Mockable",
    ],

)
